--- a/src/main/webapp/admin/author.xhtml
+++ b/src/main/webapp/admin/author.xhtml
@@ -1,23 +1,33 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core">
 	<h:form id="deleteAuthorModalForm">
-		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="Eliminar registro">
+		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog"
+			aria-labelledby="Eliminar registro">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
 							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						</button>
-						<h4 class="modal-title" id="myModalLabel">Confirmar eliminación</h4>
+						<h4 class="modal-title" id="myModalLabel">Confirmar
+							eliminación</h4>
 					</div>
-					<div class="modal-body">¿Está seguro que desea eliminar este registro?</div>
+					<div class="modal-body">¿Está seguro que desea eliminar este
+						registro?</div>
 					<div class="modal-footer">
 						<div class="input-group">
-							<p:commandButton id="deleteYesButton" value="Eliminar" action="#{authorBean.delete}"
+							<p:commandButton id="deleteYesButton" value="Eliminar"
+								action="#{authorBean.delete}"
 								update="formAuthor, deleteAuthorModalForm, editAuthorModalForm, createAuthorModalForm"
 								oncomplete="$('#deleteModal').modal('hide')" />
-							<p:commandButton id="deleteNoButton" value="Cancelar" type="button"
-								update="formAuthor, editAuthorModalForm, createAuthorModalForm" onclick="$('#deleteModal').modal('hide')"
+							<p:commandButton id="deleteNoButton" value="Cancelar"
+								type="button"
+								update="formAuthor, editAuthorModalForm, createAuthorModalForm"
+								onclick="$('#deleteModal').modal('hide')"
 								action="#{authorBean.restartAuthorTypes()}" />
 						</div>
 					</div>
@@ -27,11 +37,13 @@
 	</h:form>
 
 	<h:form id="editAuthorModalForm">
-		<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="Editar Autor">
+		<div class="modal fade" id="editModal" tabindex="-1" role="dialog"
+			aria-labelledby="Editar Autor">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
 							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						</button>
 						<h4 class="modal-title" id="myModalLabel">Editar Autor</h4>
@@ -39,9 +51,11 @@
 					<div class="modal-body">
 						<div class="form-group">
 							<div class="row">
-								<label class="col-md-4 control-label" for="taxName">Nombre Autor:</label>
+								<label class="col-md-4 control-label" for="taxName">Nombre
+									Autor:</label>
 								<div class="col-md-8">
-									<h:inputText id="authorName" styleClass="ui-state-default form-control input-sm input-block-level required"
+									<h:inputText id="authorName"
+										styleClass="ui-state-default form-control input-sm input-block-level required"
 										value="#{authorBean.author.authorName}">
 										<p:ajax process="@this" />
 										<f:validateBean disabled="true" />
@@ -50,11 +64,13 @@
 							</div>
 							<hr />
 							<div class="row">
-								<label class="col-md-4 control-label" for="level">Roles de Autor:</label>
+								<label class="col-md-4 control-label" for="level">Roles
+									de Autor:</label>
 								<div class="col-md-8">
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.authorEpithet}">
+											<p:selectBooleanCheckbox
+												value="#{authorBean.selectedAuthorTypes.authorEpithet}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
 										</div>
@@ -62,7 +78,8 @@
 									</div>
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.determiner}">
+											<p:selectBooleanCheckbox
+												value="#{authorBean.selectedAuthorTypes.determiner}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
 										</div>
@@ -70,7 +87,8 @@
 									</div>
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.collector}">
+											<p:selectBooleanCheckbox
+												value="#{authorBean.selectedAuthorTypes.collector}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
 										</div>
@@ -80,12 +98,17 @@
 							</div>
 							<hr />
 							<div class="row">
-								<label class="col-md-4 control-label" for="level">Usuario Asignado:</label>
+								<label class="col-md-4 control-label" for="level">Usuario
+									Asignado:</label>
 								<div class="col-md-8">
-									<h:selectOneMenu id="asignatedUser" class="form-control ui-state-default" value="#{authorBean.users}">
-										<f:selectItem itemValue="#{null}" itemLabel="Usuario no asignado" />
+									<h:selectOneMenu id="asignatedUser"
+										class="form-control ui-state-default"
+										value="#{authorBean.users}">
+										<f:selectItem itemValue="#{null}"
+											itemLabel="Usuario no asignado" />
 										<f:selectItems value="#{authorBean.systemUsers}" var="user"
-											itemLabel="#{user.userNames} #{user.userLastnames}" itemValue="#{user.idUser}" />
+											itemLabel="#{user.userNames} #{user.userLastnames}"
+											itemValue="#{user.idUser}" />
 									</h:selectOneMenu>
 								</div>
 							</div>
@@ -93,10 +116,13 @@
 					</div>
 					<div class="modal-footer">
 						<div class="input-group">
-							<p:commandButton id="editYesButton" value="Guardar" oncomplete="$('#editModal').modal('hide')"
-								update="formAuthor, deleteAuthorModalForm, createAuthorModalForm" actionListener="#{authorBean.edit()}" />
+							<p:commandButton id="editYesButton" value="Guardar"
+								oncomplete="$('#editModal').modal('hide')"
+								update="formAuthor, deleteAuthorModalForm, createAuthorModalForm"
+								actionListener="#{authorBean.edit()}" />
 
-							<p:commandButton id="editNoButton" value="Cancelar" oncomplete="$('#editModal').modal('hide')"
+							<p:commandButton id="editNoButton" value="Cancelar"
+								oncomplete="$('#editModal').modal('hide')"
 								update="formAuthor, deleteAuthorModalForm, createAuthorModalForm"
 								actionListener="#{authorBean.restartAuthorTypes()}" />
 						</div>
@@ -109,11 +135,13 @@
 
 	<!-- create Modal -->
 	<h:form id="createAuthorModalForm">
-		<div class="modal fade" id="createAuthorModal" tabindex="-1" role="dialog" aria-labelledby="Crear Clasificación">
+		<div class="modal fade" id="createAuthorModal" tabindex="-1"
+			role="dialog" aria-labelledby="Crear Clasificación">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
 							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						</button>
 						<h4 class="modal-title" id="myModalLabel">Crear clasificación</h4>
@@ -121,9 +149,11 @@
 					<div class="modal-body">
 						<div class="form-group">
 							<div class="row">
-								<label class="col-md-4 control-label" for="taxName">Nombre Autor:</label>
+								<label class="col-md-4 control-label" for="taxName">Nombre
+									Autor:</label>
 								<div class="col-md-8">
-									<h:inputText id="authorName" styleClass="ui-state-default form-control input-sm input-block-level required"
+									<h:inputText id="authorName"
+										styleClass="ui-state-default form-control input-sm input-block-level required"
 										value="#{authorBean.author.authorName}">
 										<p:ajax process="@this" />
 										<f:validateBean disabled="true" />
@@ -132,11 +162,13 @@
 							</div>
 							<hr />
 							<div class="row">
-								<label class="col-md-4 control-label" for="level">Roles de Autor:</label>
+								<label class="col-md-4 control-label" for="level">Roles
+									de Autor:</label>
 								<div class="col-md-8">
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.authorEpithet}">
+											<p:selectBooleanCheckbox
+												value="#{authorBean.selectedAuthorTypes.authorEpithet}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
 										</div>
@@ -144,7 +176,8 @@
 									</div>
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.determiner}">
+											<p:selectBooleanCheckbox
+												value="#{authorBean.selectedAuthorTypes.determiner}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
 										</div>
@@ -152,7 +185,8 @@
 									</div>
 									<div class="row">
 										<div class="col-md-1">
-											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.collector}">
+											<p:selectBooleanCheckbox
+												value="#{authorBean.selectedAuthorTypes.collector}">
 												<p:ajax process="@this" />
 											</p:selectBooleanCheckbox>
 										</div>
@@ -162,12 +196,17 @@
 							</div>
 							<hr />
 							<div class="row">
-								<label class="col-md-4 control-label" for="level">Usuario Asignado:</label>
+								<label class="col-md-4 control-label" for="level">Usuario
+									Asignado:</label>
 								<div class="col-md-8">
-									<h:selectOneMenu id="asignatedUser" class="form-control ui-state-default" value="#{authorBean.users}">
-										<f:selectItem itemValue="#{null}" itemLabel="Usuario no asignado" />
+									<h:selectOneMenu id="asignatedUser"
+										class="form-control ui-state-default"
+										value="#{authorBean.users}">
+										<f:selectItem itemValue="#{null}"
+											itemLabel="Usuario no asignado" />
 										<f:selectItems value="#{authorBean.systemUsers}" var="user"
-											itemLabel="#{user.userNames} #{user.userLastnames}" itemValue="#{user.idUser}" />
+											itemLabel="#{user.userNames} #{user.userLastnames}"
+											itemValue="#{user.idUser}" />
 									</h:selectOneMenu>
 								</div>
 							</div>
@@ -175,10 +214,13 @@
 					</div>
 					<div class="modal-footer">
 						<div class="input-group">
-							<p:commandButton id="createYesButton" value="Guardar" action="#{authorBean.persist()}" update=":formAuthor"
+							<p:commandButton id="createYesButton" value="Guardar"
+								action="#{authorBean.persist()}" update=":formAuthor"
 								oncomplete="$('#createAuthorModal').modal('hide')" />
-							<p:commandButton id="createNoButton" value="Cancelar" onclick="$('#createAuthorModal').modal('hide')"
-								update="formAuthor, deleteAuthorModalForm, editAuthorModalForm" action="#{authorBean.restartAuthorTypes()}" />
+							<p:commandButton id="createNoButton" value="Cancelar"
+								onclick="$('#createAuthorModal').modal('hide')"
+								update="formAuthor, deleteAuthorModalForm, editAuthorModalForm"
+								action="#{authorBean.restartAuthorTypes()}" />
 						</div>
 					</div>
 				</div>
@@ -189,14 +231,17 @@
 
 	<!-- detail Modal -->
 	<h:form id="detailAuthorModalForm">
-		<div class="modal fade" id="detailTaxModal" tabindex="-1" role="dialog" aria-labelledby="Detalle de Especímenes">
+		<div class="modal fade" id="detailModal" tabindex="-1"
+			role="dialog" aria-labelledby="Detalle de Especímenes">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
 							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						</button>
-						<h4 class="modal-title" id="myModalLabel">Detalle de Especímenes</h4>
+						<h4 class="modal-title" id="myModalLabel">Detalle de
+							Especímenes</h4>
 					</div>
 					<div class="modal-body">
 						<div class="form-group">
@@ -204,8 +249,10 @@
 								<div class="row">
 									<h:outputText class="col-md-10"
 										value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet} (#{specimen.commonName})" />
-									<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action"
-										oncomplete="PF('specimenDetail').show()" title="Ficha técnica de #{specimen.commonName}"
+									<p:commandLink id="viewButton"
+										class="btn btn-default btn-sm btn-action"
+										oncomplete="PF('specimenDetail').show()"
+										title="Ficha técnica de #{specimen.commonName}"
 										actionListener="#{specimenBean.setSpecimen(specimen)}">
 										<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 									</p:commandLink>
@@ -216,7 +263,8 @@
 					</div>
 					<div class="modal-footer">
 						<div class="input-group">
-							<p:commandButton id="detailNoButton" value="Cerrar" type="button" onclick="$('#detailModal').modal('hide')" />
+							<p:commandButton id="detailNoButton" value="Cerrar" type="button"
+								onclick="$('#detailModal').modal('hide')" />
 						</div>
 					</div>
 				</div>
@@ -227,41 +275,57 @@
 
 	<h:form id="formAuthor">
 		<p:growl id="growl" showDetail="true" />
-		<p:commandButton id="createButton" value="Crear nuevo autor" actionListener="#{authorBean.prepareCreate()}"
+		<p:commandButton id="createButton" value="Crear nuevo autor"
+			actionListener="#{authorBean.prepareCreate()}"
 			oncomplete="$('#createAuthorModal').modal({backdrop: false})"
 			update="formAuthor, deleteAuthorModalForm, editAuthorModalForm, createAuthorModalForm" />
 		<hr />
-		<h:dataTable id="dataTableAuthor" rendered="#{authorBean.allAuthors != null and !authorBean.allAuthors.isEmpty()}"
-			value="#{authorBean.allAuthors}" var="author" styleClass="table table-hover table-condensed">
+		<h:dataTable id="dataTableAuthor"
+			rendered="#{authorBean.allAuthors != null and !authorBean.allAuthors.isEmpty()}"
+			value="#{authorBean.allAuthors}" var="author"
+			styleClass="table table-hover table-condensed">
 			<h:column>
 				<f:facet name="header">Nombre Autor</f:facet>
 				<h:outputText value="#{author.authorName}" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">Autor Epiteto Específico</f:facet>
-				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].authorEpithet}" disabled="true" />
+				<p:selectBooleanCheckbox
+					value="#{authorBean.authorTypes[author.idAuthor].authorEpithet}"
+					disabled="true" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">Determinador</f:facet>
-				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].determiner}" disabled="true" />
+				<p:selectBooleanCheckbox
+					value="#{authorBean.authorTypes[author.idAuthor].determiner}"
+					disabled="true" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">Colector</f:facet>
-				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].collector}" disabled="true" />
+				<p:selectBooleanCheckbox
+					value="#{authorBean.authorTypes[author.idAuthor].collector}"
+					disabled="true" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">Acciones</f:facet>
-				<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action"
-					oncomplete="$('#detailModal').modal({backdrop: false})" title="Ver detalle">
+				<p:commandLink id="viewButton"
+					class="btn btn-default btn-sm btn-action"
+					oncomplete="$('#detailModal').modal({backdrop: false})"
+					update="detailAuthorModalForm" title="Ver detalle"
+					actionListener="#{authorBean.specimenDetail(author)}">
 					<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 				</p:commandLink>
-				<p:commandLink id="editButton" class="btn btn-default btn-sm btn-action"
-					oncomplete="$('#editModal').modal({backdrop: false})" update="editAuthorModalForm" title="Editar autor"
+				<p:commandLink id="editButton"
+					class="btn btn-default btn-sm btn-action"
+					oncomplete="$('#editModal').modal({backdrop: false})"
+					update="editAuthorModalForm" title="Editar autor"
 					actionListener="#{authorBean.setAuthor(author)}">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 				</p:commandLink>
-				<p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action"
-					oncomplete="$('#deleteModal').modal({backdrop: false})" title="Eliminar autor">
+				<p:commandLink id="deleteButton"
+					class="btn btn-default btn-sm btn-action"
+					oncomplete="$('#deleteModal').modal({backdrop: false})"
+					title="Eliminar autor">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 				</p:commandLink>
 			</h:column>
