--- a/src/main/webapp/admin/specimenManager.xhtml
+++ b/src/main/webapp/admin/specimenManager.xhtml
@@ -1,64 +1,355 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://java.sun.com/jsf/core">
-    <h:form id="formSCon">
-        <p:dataTable id="dataTableScon" paginator="true" rows="5" value="#{specimenContentBean.allSpecimenContents}" var="scon" emptyMessage="No se encontraron contenidos para los especímenes" paginatorPosition="top">
-            <p:column headerText="Nombre Científico">
-                <h:outputText styleClass="cursive" value="#{scon.idSpecimen.idTaxonomy.taxonomyName} #{scon.idSpecimen.specificEpithet}"/>
-            </p:column>
-            <p:column headerText="Nombre Común">
-                <h:outputText value="#{scon.idSpecimen.commonName}" />
-            </p:column>
-            <p:column headerText="Descripción Básica">
-                <h:outputText value="#{scon.shortDescription}" />
-            </p:column>
-            <p:column headerText="Nombre del Archivo">
-                <h:outputText value="#{scon.fileName}" />
-            </p:column>
-            <p:column headerText="Fecha de Carga">
-                <h:outputText value="#{specimenContentBean.formatDate(scon.fileUploadDate, 'dd/MM/yyyy HH:mm:ss')}" />
-            </p:column>
-            <p:column headerText="Se publica?">
-                <h:outputText value="#{scon.publish == 'S'?'Si':'No'}" />
-            </p:column>
-            <p:column headerText="Fecha de publicación">
-                <h:outputText value="#{specimenContentBean.formatDate(scon.publishDate)}" />
-            </p:column>
-            <p:column headerText="Acciones" style="">
-                <p:commandButton id="editButton" icon="ui-icon-pencil" oncomplete="PF('sconDialog').show()" update="detailDialog :sconDialogForm" title="Editar contenido de #{scon.idSpecimen.idTaxonomy.taxonomyName} #{scon.idSpecimen.specificEpithet}" actionListener="#{specimenContentBean.prepareUpdate(scon)}"/>
-                <p:commandButton id="deleteButton" icon="ui-icon-trash" oncomplete="PF('sconDelete').show()" title="Eliminar #{specimen.commonName}" actionListener="#{specimenContentBean.prepareDelete(scon)}"/>
-            </p:column>
-            <f:facet name="footer">
-                <p:commandButton id="btnCreate" value="Nuevo Contenido" oncomplete="PF('sconDialog').show()" update=":detailDialog" title="Crear contenido nuevo" actionListener="#{specimenContentBean.prepareCreate()}"/>
-            </f:facet>
-        </p:dataTable>
-        <p:growl id="messages" showDetail="true"/>
-    </h:form>
-    <p:dialog id="detailDialog" widgetVar="sconDialog" modal="true" resizable="false" appendTo="@(body)" header="#{specimenContentBean.header}" closeOnEscape="true" > 
-        <h:form id="sconDialogForm" enctype="multipart/form-data">
-            <p:panelGrid id="displayCreate" columns="2">
-                <p:outputLabel value="Espécimen:" for="speId" />
-                <p:selectOneMenu id="speId" value="#{specimenContentBean.selectedSpecimen}" effect="fade" required="true" rendered="true" requiredMessage="Debes escoger un espécimen!">
-                    <f:selectItem itemLabel="Selecciona un espécimen" itemValue="" />
-                    <f:selectItems value="#{specimenContentBean.allSpecimens}" var="spe" itemLabel="#{spe.idTaxonomy.taxonomyName} #{spe.specificEpithet}" itemValue="#{spe.idSpecimen}" />
-                </p:selectOneMenu>
-                <p:outputLabel value="Descripción de la imagen:" for="desc" />
-                <p:inputTextarea id="desc" value="#{specimenContentBean.specimenContent.shortDescription}" rows="3" title="Descripción del pie de la imagen" rendered="true" required="true" requiredMessage="Debes definir una descripción!"/>
-                <p:outputLabel value="Para publicar:" for="pub" />
-                <p:selectBooleanCheckbox id="pub" value="#{specimenContentBean.publish}"/>
-                <p:outputLabel value="Archivo de Imagen:" />
-                <p:fileUpload value="#{specimenContentBean.contentFile}" mode="simple" fileLimit="1" label="Adjuntar" required="true" invalidFileMessage="Debe ser un archivo de imagen!!" skinSimple="true"/>
-            </p:panelGrid>
-            <p:commandButton id="createSave" value="Guardar" action="#{specimenContentBean.persist()}" ajax="false"/>
-        </h:form>
-    </p:dialog>
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core">
 
-    <p:confirmDialog id="deleteDialog" appendTo="@(body)" widgetVar="sconDelete" message="¿Está seguro que desea eliminar este registro?" showEffect="fade" hideEffect="fade" header="Confirmar eliminación" severity="alarm">
-        <h:form id="deleteForm" style=""> 
-            <p:commandButton id="deleteYesButton" value="Eliminar" action="#{specimenContentBean.delete()}" update=":formSCon" oncomplete="PF('sconDelete').hide()" />
-            <p:commandButton id="deleteNoButton" value="Cancelar" onclick="PF('sconDelete').hide()" type="button" />
-        </h:form>
-    </p:confirmDialog>
+	<h:form id="deleteSCModalForm">
+		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog"
+			aria-labelledby="Eliminar registro">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Confirmar
+							eliminación</h4>
+					</div>
+					<div class="modal-body">¿Está seguro que desea eliminar este
+						registro?</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="deleteYesButton" value="Eliminar"
+								action="#{specimenContentBean.delete}"
+								update="formSpecimen, deleteSCModalForm, editSCModalForm, createSCModalForm"
+								oncomplete="$('#deleteModal').modal('hide')" />
+							<p:commandButton id="deleteNoButton" value="Cancelar"
+								type="button"
+								update="formSpecimen, editSCModalForm, createSCModalForm"
+								onclick="$('#deleteModal').modal('hide')" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+
+	<h:form id="editSCModalForm" enctype="multipart/form-data">
+		<div class="modal fade" id="editModal" tabindex="-1" role="dialog"
+			aria-labelledby="Editar Autor">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Editar Contenido</h4>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<div class="row">
+								<label class="col-md-4 control-label" for="fileName">Archivo
+									actual:</label>
+								<div class="col-md-8">
+									<h:inputText id="fileName"
+										styleClass="ui-state-default form-control input-sm input-block-level required"
+										value="#{specimenContentBean.specimenContent.fileName}">
+										<p:ajax process="@this" />
+										<f:validateBean disabled="true" />
+									</h:inputText>
+								</div>
+							</div>
+							<hr />
+							<div class="row">
+								<label class="col-md-4 control-label" for="loadDate">Actualizar
+									Archivo:</label>
+								<div class="col-md-8">
+									<p:fileUpload value="#{specimenContentBean.contentFile}"
+										mode="simple" fileLimit="1" label="Adjuntar" required="true"
+										invalidFileMessage="Debe ser un archivo de imagen!!"
+										skinSimple="true" />
+								</div>
+							</div>
+
+							<hr />
+							<div class="row">
+								<label class="col-md-4 control-label" for="specimen">Espécimen:</label>
+								<div class="col-md-8">
+									<p:autoComplete id="specimen" dropdown="true"
+										value="#{specimenContentBean.specimenContent.idSpecimen}"
+										completeMethod="#{specimenContentBean.specimenQuery}"
+										var="spc"
+										itemLabel="#{spc.idTaxonomy.taxonomyName} #{spc.specificEpithet}"
+										itemValue="#{spc}" forceSelection="true"
+										converter="SpecimenConverter">
+										<p:ajax process="@this" />
+									</p:autoComplete>
+								</div>
+							</div>
+							<div class="row">
+								<label class="col-md-4 control-label" for="desc">Descripción:</label>
+								<div class="col-md-8">
+									<p:inputTextarea id="desc"
+										value="#{specimenContentBean.specimenContent.shortDescription}"
+										rows="3" title="Descripción del pie de la imagen" />
+								</div>
+							</div>
+							<div class="row">
+								<label class="col-md-4 control-label" for="level">Publicar:</label>
+								<div class="col-md-8">
+									<p:selectBooleanCheckbox id="published"
+										value="#{specimenContentBean.publish}" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="editYesButton" value="Guardar"
+								oncomplete="$('#editModal').modal('hide')"
+								update="formSpecimen, deleteSCModalForm, createSCModalForm"
+								actionListener="#{specimenContentBean.edit()}" />
+
+							<p:commandButton id="editNoButton" value="Cancelar"
+								oncomplete="$('#editModal').modal('hide')"
+								update="formSpecimen, deleteSCModalForm, createSCModalForm" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+	<!-- end edit Modal -->
+
+	<!-- create Modal -->
+	<h:form id="createSCModalForm">
+		<div class="modal fade" id="createModal" tabindex="-1" role="dialog"
+			aria-labelledby="Crear Clasificación">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Crear Contenido</h4>
+					</div>
+					<div class="modal-body">
+						<div class="row">
+							<label class="col-md-4 control-label" for="fileName">Archivo
+								actual:</label>
+							<div class="col-md-8">
+								<h:inputText id="fileName" disabled="true"
+									styleClass="
+									ui-state-default form-control input-sm input-block-level
+									required"
+									value="#{specimenContentBean.specimenContent.fileName}" />
+							</div>
+						</div>
+						<hr />
+						<div class="row">
+							<label class="col-md-4 control-label" for="loadDate">Actualizar
+								Archivo:</label>
+							<div class="col-md-8">
+								<p:fileUpload value="#{specimenContentBean.contentFile}"
+									mode="simple" fileLimit="1" label="Adjuntar"
+									invalidFileMessage="Debe ser un archivo de imagen!!"
+									skinSimple="true" />
+							</div>
+						</div>
+
+						<hr />
+						<div class="row">
+							<label class="col-md-4 control-label" for="specimen">Espécimen:</label>
+							<div class="col-md-8">
+								<p:autoComplete id="specimen" dropdown="true"
+									value="#{specimenContentBean.specimenContent.idSpecimen}"
+									completeMethod="#{specimenContentBean.specimenQuery}" var="spc"
+									itemLabel="#{spc.idTaxonomy.taxonomyName} #{spc.specificEpithet}"
+									itemValue="#{spc}" forceSelection="true"
+									converter="SpecimenConverter">
+									<p:ajax process="@this" />
+								</p:autoComplete>
+							</div>
+						</div>
+						<div class="row">
+							<label class="col-md-4 control-label" for="desc">Descripción:</label>
+							<div class="col-md-8">
+								<p:inputTextarea id="desc"
+									value="#{specimenContentBean.specimenContent.shortDescription}"
+									rows="3" title="Descripción del pie de la imagen" />
+							</div>
+						</div>
+						<div class="row">
+							<label class="col-md-4 control-label" for="level">Publicar:</label>
+							<div class="col-md-8">
+								<p:selectBooleanCheckbox id="published"
+									value="#{specimenContentBean.publish}" />
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="createYesButton" value="Guardar"
+								action="#{specimenContentBean.persist()}" update=":formSpecimen"
+								ajax="false" oncomplete="$('#createModal').modal('hide')" />
+							<p:commandButton id="createNoButton" value="Cancelar"
+								onclick="$('#createModal').modal('hide')"
+								update="formSpecimen, deleteSCModalForm, editSCModalForm" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+	<!-- end create Modal -->
+
+	<h:form id="formSpecimen">
+		<div class="panel panel-default">
+			<div class="panel-heading">Contenido Gráfico</div>
+			<div class="panel-body">
+				<div class="form-group">
+					<div class="row">
+						<label class="col-md-1 control-label" for="specimen">Especimen:</label>
+						<div class="col-md-2">
+							<p:autoComplete id="specimen" dropdown="true"
+								value="#{specimenContentBean.specimenContent.idSpecimen}"
+								completeMethod="#{specimenContentBean.specimenQuery}" var="spc"
+								itemLabel="#{spc.idTaxonomy.taxonomyName} #{spc.specificEpithet}"
+								itemValue="#{spc}" forceSelection="true"
+								converter="SpecimenConverter">
+								<p:ajax process="@this" />
+							</p:autoComplete>
+						</div>
+						<label class="col-md-1 control-label" for="epiteto">Nombre
+							del Archivo:</label>
+						<div class="col-md-2">
+							<h:inputText id="nombreArchivo"
+								styleClass="ui-state-default form-control input-sm input-block-level required"
+								value="#{specimenContentBean.specimenContent.fileName}">
+								<p:ajax process="@this" />
+								<f:validateBean disabled="true" />
+							</h:inputText>
+						</div>
+						<label class="col-md-1 control-label" for="published">Publicado:</label>
+						<div class="col-md-2">
+							<p:selectBooleanCheckbox id="published"
+								value="#{specimenContentBean.publish}" />
+						</div>
+					</div>
+				</div>
+				<hr />
+				<h:panelGroup layout="block"
+					rendered="#{specimenContentBean.searchSpecimenContent != null and !specimenContentBean.searchSpecimenContent.isEmpty()}"
+					styleClass="pull-right">
+					<p>
+						Mostrando <b>#{specimenContentBean.searchSpecimenContent.size()}</b>
+						de <b>#{specimenContentBean.pager.numberOfResults}</b> registros
+					</p>
+				</h:panelGroup>
+				<p:commandButton id="search"
+					actionListener="#{specimenContentBean.search()}"
+					update="formSpecimen" value="Consultar" />
+				<p:commandButton id="clear"
+					actionListener="#{specimenContentBean.limpiarFiltros()}"
+					update="formSpecimen" value="Limpiar" />
+				<p:commandButton id="createButton" value="Crear nuevo autor"
+					oncomplete="$('#createModal').modal({backdrop: false})"
+					update="formSpecimen, deleteSCModalForm, editSCModalForm, createSCModalForm" />
+			</div>
+			<h:dataTable id="dataTableSpecimen"
+				rendered="#{specimenContentBean.searchSpecimenContent  != null and !specimenContentBean.searchSpecimenContent.isEmpty()}"
+				value="#{specimenContentBean.searchSpecimenContent}"
+				var="specimenContent" styleClass="table table-hover table-condensed">
+				<h:column>
+					<f:facet name="header">Nombre Científico</f:facet>
+					<h:outputText
+						value="#{specimenContent.idSpecimen.idTaxonomy.taxonomyName} #{specimenContent.idSpecimen.specificEpithet}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Nombre Común</f:facet>
+					<h:outputText value="#{specimenContent.idSpecimen.commonName}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Fecha de Determinación</f:facet>
+					<h:outputText
+						value="#{specimenContentBean.formatDate(specimenContent.idSpecimen.idenDate)}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Fecha de Colecta</f:facet>
+					<h:outputText
+						value="#{specimenContentBean.formatDate(specimenContent.idSpecimen.collectDate)}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Tipo de Muestra</f:facet>
+					<h:outputText value="#{specimenContent.idSpecimen.idSaty.satyName}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Acciones</f:facet>
+					<p:commandLink id="viewButton"
+						class="btn btn-default btn-sm btn-action"
+						oncomplete="PF('specimenDetail').show()"
+						title="Ficha técnica de #{specimen.commonName}"
+						actionListener="#{specimenContentBean.setSpecimenContent(specimen)}">
+						<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+					</p:commandLink>
+					<p:commandLink id="editButton"
+						class="btn btn-default btn-sm btn-action"
+						oncomplete="PF('specimenWizard').show()"
+						update=":formDialog :specimenWizardForm"
+						title="Editar #{specimen.commonName}"
+						actionListener="#{specimenContentBean.setSpecimenContent(specimen)}">
+						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+					</p:commandLink>
+					<p:commandLink id="deleteButton"
+						class="btn btn-default btn-sm btn-action"
+						oncomplete="$('#deleteModal').modal({backdrop: false})"
+						title="Eliminar #{specimen.commonName}"
+						actionListener="#{specimenContentBean.setSpecimen(specimen)}">
+						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+					</p:commandLink>
+				</h:column>
+			</h:dataTable>
+			<h:panelGroup id="paginator"
+				rendered="#{specimenContentBean.searchSpecimenContent != null and !specimenContentBean.searchSpecimenContent.isEmpty()}">
+				<nav aria-label="Page navigation" class="paginador">
+					<ul class="pagination pagination-lg">
+						<li><p:commandLink id="first" title="Primera página"
+								actionListener="#{specimenContentBean.pager.firstPage()}"
+								update="dataTableSpecimen, paginator">
+								<span class="glyphicon glyphicon-chevron-left"
+									aria-hidden="true"></span>
+							</p:commandLink></li>
+						<li><p:commandLink id="prev" title="Anterior página"
+								actionListener="#{specimenContentBean.pager.previousPage()}"
+								update="dataTableSpecimen, paginator">
+								<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+							</p:commandLink></li>
+						<ui:repeat id="pager" var="i"
+							value="#{specimenContentBean.pager.pages}">
+							<li><p:commandLink id="pageNumer"
+									actionListener="#{specimenContentBean.pager.getPageResults(i)}"
+									class="#{specimenContentBean.pager.currentPage == i? 'active-page': ''}"
+									update="formSpecimen:paginator, formSpecimen:dataTableSpecimen">#{i}</p:commandLink></li>
+						</ui:repeat>
+						<li><p:commandLink id="next" title="Siguiente página"
+								actionListener="#{specimenContentBean.pager.nextPage()}"
+								update="dataTableSpecimen, paginator">
+								<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+							</p:commandLink></li>
+						<li><p:commandLink id="last" title="Última página"
+								actionListener="#{specimenContentBean.pager.lastPage()}"
+								update="dataTableSpecimen, paginator">
+								<span class="glyphicon glyphicon-chevron-right"
+									aria-hidden="true"></span>
+							</p:commandLink></li>
+					</ul>
+				</nav>
+			</h:panelGroup>
+		</div>
+		<p:growl id="messages" showDetail="true" />
+	</h:form>
 </ui:composition>
